--- a/thankyou.html
+++ b/thankyou.html
@@ -162,11 +162,11 @@
         <div class="hotel-info">
           <div class="hotel-info__text">
             <div class="hotel-wrapper">
-              <h1 class="hotel-name hotel-info__name">Сообщение отправлено</h1>
+              <h1 class="hotel-name hotel-info__name">Message sent</h1>
             </div>
             <!-- /.hotel-wrapper -->
             <p class="hotel-description hotel-info__description">
-              Наш менеджер позвонит вам через 5 минут.
+              Our manager will call you back within 15 minutes
             </p>
           </div>
           <!-- /.hotel-info__text -->
